--- a/public/client.css
+++ b/public/client.css
@@ -1,8 +1,10 @@
+/*edit css Isaac*/
+
 #message_form {
 	display: none;
 }
 
-#button-container {	
+#button-container {
 	width: 60%;
 	margin: 0 auto;
 	float: none;
