--- a/public/client.css
+++ b/public/client.css
@@ -1,4 +1,4 @@
-/*edit css Isaac*/
+/*edit css Isaacc*/
 
 #message_form {
 	display: none;
@@ -17,3 +17,5 @@ td {
 .headline, #nickname_form, #users {
 	text-align: center;
 }
+
+/*ex*/
