--- a/public/main.css
+++ b/public/main.css
@@ -97,11 +97,18 @@ hr {
   /*border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;*/
+  margin-top: -50px;
   border: 10px solid #8A0707;
 }
 
 .table>thead>tr>th {
 	border-bottom: 2px solid #ededed;
+}
+
+#mainPlaylist {
+  display: block;
+  max-height: 400px;
+  overflow-y: scroll;
 }
 
 /*
