--- a/public/progress_bar.css
+++ b/public/progress_bar.css
@@ -22,7 +22,7 @@
 
 .progressbarplay .bar {
   cursor:pointer;
-  background: #8A0707;
+  background: #a90c0c;
   width: 0;
   height: 20px;
   color: white;
