--- a/public/client.css
+++ b/public/client.css
@@ -1,3 +1,19 @@
+h1, h2, h3, h4, h5, h6, p, button, li {
+  font-family: 'Lato', sans-serif;
+}
+
+p {
+
+}
+
+li {
+  font-size: 105%;
+}
+
+.one_one_em {
+  font-size: 105%;
+}
+
 html, body {
   background-color: #f7f7f9;
 }
@@ -52,6 +68,11 @@ td {
   text-align: center;
 }
 
+#welcome_h1 {
+  text-align: center;
+  font-size: 2em;
+}
+
 table {
   width: 100%;
   table-layout: fixed;
@@ -97,9 +118,6 @@ table {
   background: url('images/pause.png');
 }
 
-#welcome_h1 {
-  text-align: center;
-}
 
 #uploadForm {
   margin-top: 30px;
