--- a/public/main.css
+++ b/public/main.css
@@ -1,8 +1,31 @@
+h1, h2, h3, h4, h5, h6, p, button, li {
+  font-family: 'Lato', sans-serif;
+}
+
+li {
+  font-size: 1.2em;
+  margin: 0;
+}
+
+li h6 {
+  margin: 0;
+  font-size: 0.8em;
+}
+
+p {
+  font-size: 1em;
+}
+
+.one_one_em {
+  font-size: 105%;
+}
+
 /*html {
   height: 100%;
   margin: 0;
   padding: 0;
 }*/
+
 body { 
   background: url(/images/setupPhoto-1473793232871.jpeg) no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -141,6 +164,6 @@ img {
   height: auto;
 }*/
 
-#current_track h4 {
-
+.current_track_div {
+  margin: 20px;  
 }
